<resources>
    <string name="app_name">Monastery360</string>
    <string name="title_home">Home</string>
    <string name="title_travel_trips">Travel</string>
    <string name="title_events">Events</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="weather_rumtek_monastery">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">Permits</string>
    <string name="cabs">Cabs</string>
    <string name="search_monastaries">Search monastaries</string>
    <string name="open_in_maps">Open in Maps</string>
    <string name="rumtek_monastery">Rumtek Monastery</string>
    <string name="perched_on_a_hill_just_23_km_from_gangtok_rumtek_monastery_is_sikkim_s_largest_and_most_famous_monastery_known_as_the_seat_of_the_karma_kagyu_lineage_of_tibetan_buddhism_visitors_are_welcomed_by_its_stunning_tibetan_architecture_vibrant_murals_and_the_golden_stupa_enshrined_with_precious_relics_the_serene_surroundings_and_panoramic_views_of_the_himalayas_make_it_a_peaceful_retreat_you_can_witness_daily_chanting_rituals_explore_the_monastery_courtyard_and_enjoy_quiet_moments_perfect_for_meditation_or_photography_best_time_to_visit_morning_prayers_or_late_afternoon_for_sunset_views_tip_wear_modest_clothing_and_comfortable_shoes_as_the_monastery_is_on_a_short_uphill_walk">Perched on a hill just 23 km from Gangtok, Rumtek Monastery is Sikkim’s largest and most famous monastery, known as the seat of the Karma Kagyu lineage of Tibetan Buddhism. Visitors are welcomed by its stunning Tibetan architecture, vibrant murals, and the Golden Stupa enshrined with precious relics. The serene surroundings and panoramic views of the Himalayas make it a peaceful retreat. You can witness daily chanting rituals, explore the monastery courtyard, and enjoy quiet moments perfect for meditation or photography.</string>
    <string name="best_time_to_visit">Best Time to Visit</string>
    <string name="morning_prayers_or_late_afternoon_for_sunset_views">Spring (March to May) &amp; Autumn (September to November)</string>
    <string name="tips">Tips</string>
    <string name="wear_modest_clothing_and_comfortable_shoes_as_the_monastery_is_on_a_short_uphill_walk">Wear modest clothing and comfortable shoes, as the monastery is on a short uphill walk.</string>
    <string name="open_360">Open 360</string>
    <string name="play_audio">Play Audio</string>
    <string name="enchey_monastery">Enchey Monastery</string>
    <string name="just_3_km_from_gangtok_enchey_monastery_is_a_serene_hilltop_retreat_surrounded_by_pine_forests_and_offering_stunning_views_of_mt_kanchenjunga_built_over_200_years_ago_it_belongs_to_the_nyingma_sect_of_tibetan_buddhism_and_is_famous_for_its_vibrant_prayer_flags_intricate_murals_and_tranquil_prayer_halls_the_monastery_is_especially_lively_during_the_annual_detor_cham_festival_jan_feb_when_masked_dances_and_rituals_take_place">Just 3 km from Gangtok, Enchey Monastery is a serene hilltop retreat surrounded by pine forests and offering stunning views of Mt. Kanchenjunga. Built over 200 years ago, it belongs to the Nyingma sect of Tibetan Buddhism and is famous for its vibrant prayer flags, intricate murals, and tranquil prayer halls. The monastery is especially lively during the annual <b>Detor Cham festival</b> (Jan/Feb), when masked dances and rituals take place.</string>
    <string name="spring_march_to_june_amp_autumn_september_to_october"><![CDATA[Spring (March to June) & Autumn (September to October)]]></string>
    <string name="dress_respectfully_and_remove_your_hat_and_sunglasses_before_entering_walk_clockwise_around_the_monastery_and_refrain_from_photography_or_video_inside_the_hall_as_these_activities_are_forbidden_no_tickets_are_needed_in_advance_for_this_free_to_enter_attraction">Dress respectfully and remove your hat and sunglasses before entering. Walk clockwise around the monastery and refrain from photography or video inside the hall, as these activities are forbidden. No tickets are needed in advance for this free-to-enter attraction.</string>
    <string name="dress_respectfully_before_entering_remove_your_hat_and_sunglasses_walk_clockwise_around_the_monastery_do_not_take_photographs_or_videos_inside_the_hall_forbidden_no_tickets_are_required_entry_is_free">• Dress respectfully before entering.\n• Remove your hat and sunglasses.\n• Walk clockwise around the monastery.\n• Do not take photos or videos inside the hall.\n• No tickets are required; entry is free.</string>
    <string name="situated_in_the_picturesque_village_of_lachen_about_120_km_from_gangtok_lachen_monastery_ngodub_choling_offers_peace_history_and_stunning_mountain_views_established_in_1858_it_follows_the_nyingma_tradition_of_tibetan_buddhism_and_is_known_for_its_vibrant_prayer_flags_colorful_murals_and_traditional_architecture_though_smaller_than_other_monasteries_in_sikkim_its_charm_lies_in_its_quiet_setting_and_panoramic_views_of_the_lachen_valley">It is a historic Nyingma Buddhist gompa in North Sikkim, India, known for its beautiful Tibetan architecture, colourful murals, and serene atmosphere surrounded by picturesque mountains. Established in 1880, it features two stories, a two-storey prayer hall, and hosts significant Buddhist festivals, including an annual mask dance. The monastery, located near the Lachung River, is a popular religious and cultural site, offering a tranquil glimpse into the region\'s rich Buddhist heritage.</string>
    <string name="march_to_june_for_pleasant_weather_blooming_rhododendrons_and_the_yak_race_and_october_to_february_for_clear_skies_snow_capped_mountains_frozen_lakes_and_adventure_activities">March to June for pleasant weather, blooming rhododendrons, and the Yak Race; and October to February for clear skies, snow-capped mountains, frozen lakes, and adventure activities.</string>
    <string name="dress_modestly_while_visiting_the_monastery_n_maintain_silence_n_respect_the_monks_privacy_n_avoid_taking_photos_in_the_monastery">• Dress modestly while visiting the monastery\n• Maintain silence.\n• Respect the monks\' privacy.\n• Avoid taking photos in the monastery.</string>
    <string name="it_serves_as_the_seat_of_the_karma_kagyu_lineage_of_tibetan_buddhism_and_is_renowned_for_its_stunning_architecture_golden_stupa_and_sacred_relics">It serves as the seat of the Karma Kagyu lineage of Tibetan Buddhism and is renowned for its stunning architecture, golden stupa, and sacred relics.</string>
    <string name="lachung_monastery">Lachung Monastery</string>
    <string name="it_is_a_200_year_old_buddhist_monastery_of_the_nyingma_tradition_known_for_its_peaceful_setting_colorful_murals_and_spiritual_significance">It is a 200-year-old Buddhist monastery of the Nyingma tradition, known for its peaceful setting, colorful murals, and spiritual significance.</string>
    <string name="go_early_morning_to_avoid_crowds_n_witness_the_monks_chanting_rituals_n_be_respectful_of_local_customs_n_dress_modestly_and_remove_headwear_n_walk_clockwise_around_the_complex_n_photography_is_prohibited_n_visit_the_monastery_shop_for_souvenirs">• Go early morning to avoid crowds.\n• Witness the monks\' chanting rituals.\n• Be respectful of local customs.\n• Dress modestly and remove headwear.\n• Walk clockwise around the complex.\n• Photography is prohibited.\n• Visit the monastery shop for souvenirs.</string>
    <string name="phodong_monastery">Phodong Monastery</string>
    <string name="located_about_28_km_from_gangtok_in_north_sikkim_phodong_monastery_is_a_beautiful_18th_century_monastery_of_the_karma_kagyu_lineage_set_amidst_rolling_hills_at_an_altitude_of_4_500_ft_it_is_admired_for_its_bright_murals_traditional_architecture_and_peaceful_surroundings_the_monastery_comes_alive_during_its_annual_cham_masked_dance_festival_attracting_both_devotees_and_visitors">Located about 28 km from Gangtok in North Sikkim, Phodong Monastery is a beautiful 18th-century monastery of the Karma Kagyu lineage. Set amidst rolling hills at an altitude of ~4,500 ft, it is admired for its bright murals, traditional architecture, and peaceful surroundings. The monastery comes alive during its annual <b>Cham (masked dance) festival</b>, attracting both devotees and visitors.</string>
    <string name="spring_march_to_may_and_autumn_september_to_november">Spring (March to May) and Autumn (September to November)</string>
    <string name="dress_modestly_n_remove_your_shoes_before_entering_n_maintain_a_peaceful_atmosphere_n_take_photos_only_in_designated_areas_n_respectfully_observe_the_traditions">• Dress modestly.\n• Remove your shoes before entering.\n• Maintain a peaceful atmosphere.\n• Take photos only in designated areas.\n• Respectfully observe the traditions.</string>
    <string name="perched_on_a_hill_above_yuksom_in_west_sikkim_dubdi_monastery_1701_is_the_oldest_monastery_in_the_state_and_a_key_landmark_in_sikkim_s_buddhist_history_surrounded_by_dense_forests_and_offering_stunning_views_of_the_mountains_it_is_a_peaceful_destination_for_both_spiritual_seekers_and_nature_lovers_the_monastery_houses_ancient_manuscripts_rare_buddhist_relics_and_traditional_paintings">Perched on a hill above Yuksom in West Sikkim, Dubdi Monastery (1701) is the oldest monastery in the state and a key landmark in Sikkim’s Buddhist history. Surrounded by dense forests and offering stunning views of the mountains, it is a peaceful destination for both spiritual seekers and nature lovers. The monastery houses ancient manuscripts, rare Buddhist relics, and traditional paintings.</string>
    <string name="between_march_and_may_for_pleasant_weather_and_blooming_rhododendrons_nbetween_october_and_november_for_clear_skies_and_excellent_views_of_the_himalayas">Between March and May for pleasant weather and blooming rhododendrons\nBetween October and November for clear skies and excellent views of the Himalayas.</string>
    <string name="from_yuksom_you_will_trek_for_about_an_hour_which_involves_a_climb_to_reach_the_monastery_perched_on_a_hilltop_surrounded_by_forest_nwear_sturdy_shoes_for_the_hike_and_be_prepared_for_a_steep_incline">From Yuksom, you will trek for about an hour, which involves a climb, to reach the monastery perched on a hilltop surrounded by forest.\nWear sturdy shoes for the hike and be prepared for a steep incline.</string>
    <string name="dubdi_monastery">Dubdi Monastery</string>
    <string name="it_belongs_to_the_karma_kagyu_sect_of_tibetan_buddhism_and_is_known_for_its_vibrant_murals_historic_significance_and_annual_masked_dance_festival">It belongs to the Karma Kagyu sect of Tibetan Buddhism and is known for its vibrant murals, historic significance, and annual masked dance festival.</string>
    <string name="it_belongs_to_the_nyingma_sect_of_tibetan_buddhism_and_is_historically_significant_as_the_coronation_site_of_sikkim_s_first_chogyal_king">It belongs to the Nyingma sect of Tibetan Buddhism and is historically significant as the coronation site of Sikkim’s first Chogyal (king).</string>
    <string name="offlinemap">offlinemap</string>
    <string name="indian_nationals_no_permits_required_for_most_monasteries_except_those_in_border_areas_foreign_nationals_need_inner_line_permit_ilp_protected_area_permit_pap_for_certain_areas_popular_monasteries_like_rumtek_pemayangtse_and_enchey_usually_don_t_require_special_permits_north_sikkim_monasteries_lachen_lachung_etc_require_pap"><b>• Indian Nationals: </b>No permits required for most monasteries, except those in border areas. \n<b>• Foreign Nationals:</b> Need Inner Line Permit (ILP) + Protected Area Permit (PAP) for certain areas. \n<b>• Popular monasteries </b>like Rumtek, Pemayangtse, and Enchey usually don’t require special permits. \n<b>• North Sikkim monasteries</b> (Lachen, Lachung, etc.) require PAP.</string>
</resources>